java-orchestration-kubernetes-minikube/treafic/dashboard/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: traefik-web-ui
            port:
              name: web
